--- a/package.json
+++ b/package.json
@@ -1,24 +1,52 @@
 {
+  "version": "1.0.0",
+  "private": true,
+  "name": "rn-workout-app",
   "dependencies": {
+    "@miblanchard/react-native-slider": "^2.1.0",
+    "date-fns": "^2.28.0",
     "expo": "^44.0.0",
+    "expo-app-loading": "^1.3.0",
+    "expo-font": "^10.0.5",
+    "expo-linear-gradient": "~11.0.3",
+    "expo-updates": "~0.11.6",
+    "i": "^0.3.7",
+    "npm": "^8.5.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-web": "0.17.1"
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-svg": "12.1.1",
+    "react-native-web": "0.17.1",
+    "recoil": "^0.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
+    "@typescript-eslint/eslint-plugin": "^5.13.0",
+    "@typescript-eslint/parser": "^5.13.0",
+    "eslint": "^8.10.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.29.3",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "husky": "^7.0.4",
+    "prettier": "^2.5.1",
+    "react-native-svg-transformer": "^1.0.0",
     "typescript": "~4.3.5"
   },
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx ./"
   },
-  "version": "1.0.0",
-  "private": true,
-  "name": "chrono"
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint"
+    }
+  }
 }
