--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,5 @@
 {
-  "compilerOptions": {},
-  "extends": "expo/tsconfig.base"
+    "compilerOptions": {},
+    "extends": "expo/tsconfig.base",
+    "exclude": ["__tests__/**/*-test.ts"]
 }
