--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,8 @@
 {
-    "singleQuote": true,
-    "trailingComma": "all",
-    "tabWidth": 4,
-    "useTabs": true,
-    "semi": true
+	"singleQuote": true,
+	"trailingComma": "all",
+	"tabWidth": 4,
+	"useTabs": true,
+	"semi": true,
+	"printWidth": 120
 }
