--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "name": "rn-workout-app",
   "dependencies": {
+    "@expo/react-native-action-sheet": "^3.13.0",
     "@miblanchard/react-native-slider": "^2.1.0",
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-navigation/elements": "^1.3.1",
