--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-native-uuid": "^2.0.1",
     "react-native-web": "0.17.1",
     "react-native-webview": "11.15.0",
-    "recoil": "^0.6.1"
+    "recoil": "^0.6.1",
+    "expo-av": "~10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
